--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     </header>
     <main>
         <div>
-            <img src="" alt="lamp" id="lamp">
+            <img src="img/desligada.jpg" alt="lamp" id="lamp">
         </div>
         <div>
-            <button id="turnOn">Turn on</button>
-            <button id="turnOff">Turn off</button>
+        <!--<button id="turnOn">Turn on</button>
+            <button id="turnOff">Turn off</button>-->
+            <button id="turnOnOff">Turn on</button>
         </div>
     </main>
     <script src="./lamp.js"></script>
